:recycle: refactor: collect(Collectors.toList()) -> toList()